<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_feed">

  <fragment
    android:id="@+id/nav_feed"
    android:name="com.divyanshu.newapp.ui.feed.GlobalFeedFragment"
    android:label="@string/menu_feed"
    tools:layout="@layout/fragment_feed">

    <action
      android:id="@+id/action_feed_openArticle"
      app:destination="@id/nav_article"
      app:popUpTo="@id/nav_feed" />
    <argument
      android:name="@string/arg_article_id"
      app:argType="string" />
  </fragment>

  <fragment
    android:id="@+id/nav_my_feed"
    android:name="com.divyanshu.newapp.ui.feed.MyFeedFragment"
    android:label="@string/my_feed"
    tools:layout="@layout/fragment_feed">
    <action
      android:id="@+id/action_myfeed_openArticle"
      app:destination="@id/nav_article"
      app:popUpTo="@id/nav_my_feed" />
    <argument
      android:name="@string/arg_article_id"
      app:argType="string" />
  </fragment>

  <fragment
    android:id="@+id/nav_auth"
    android:name="com.divyanshu.newapp.ui.auth.AuthFragment"
    android:label="@string/menu_auth"
    tools:layout="@layout/fragment_auth" />

  <fragment
    android:id="@+id/nav_setting"
    android:name="com.divyanshu.newapp.ui.settings.SettingsFragment"
    android:label="@string/settings"
    tools:layout="@layout/fragment_settings" />

  <fragment
    android:id="@+id/nav_article"
    android:name="com.divyanshu.newapp.ui.article.ArticleFragment"
    tools:layout="@layout/fragment_article" />


</navigation>